0.5.5 (08.30.2016)
================
* bugfixes
* add %n_i%, %n_d% - names intersection and diffs

0.5.1 (07.07.2016)
================
* initial release 
